Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/8171322/TypeVariableAsAnnotationTest.out
TypeVariableAsAnnotationTest.java:10:33: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: Override, java.lang.annotation.Annotation)
TypeVariableAsAnnotationTest.java:10:55: compiler.err.cant.resolve.location: kindname.class, XXX, , , (compiler.misc.location: kindname.class, TypeVariableAsAnnotationTest<Override>, null)
2 errors